details page added

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,7 @@
                 <tr>
                     <th>URL</th>
                     <th>Status</th>
+                    <th>Details</th>
                     <th>Action</th>
                 </tr>
             </thead>
